# Byte-me

./: Button.cpp  Button.h  Button_2.h  Byte me Solitaire report.docx  CMakeLists.txt  Card.cpp  Card.h  Card_2.cpp  Card_2.h  Cards.h  Combined_latest_main_1.cpp  Distribution_of_files.txt  Game.cpp  Game.h  Icon_file.rc  Latest_card_h.h  MK_Main_3  MK_Main_3.cpp  MK_main_2.cpp  Main-10.cpp  Notes_about_the_code  README.md  TASKS_LIST  TASKS_LIST.md  TASKS_LIST.txt  cards_new.h  comnied_latest_main_with_error.cpp  distribution_of_files  ditributing_all_the_files  latest_card_cpp_15.cpp  latest_main_MK.cpp  main.cpp
HelloSFML/: Button.cpp  Button.h  CMakeLists.txt  Card.cpp  Card.h  Game.cpp  Game.h  main.cpp
Other_files/: Button_2.cpp  comnied_latest_main_with_error.cpp  latest_main_1.cpp  main.cpp  main_button.cpp
UPDATE_DEC_31/: Game_hints.cpp  Game_hints.h
Update_Dec_28/: latest_main_15.cpp  test
Update_Dec_29/: Card.cpp  Card.h  Game.cpp  Game.h  latest_main_MK.cpp  main.cpp  r_u_dum.cpp  the_latest_should_be_working_main.cpp
Updte_DEC_30/: Game.cpp  Game.h  HOW-TO-UPLOAD.TXT  latest_game.cpp  latest_game.h
phase1_new_cards/HelloSFML/: Button.h  CMakeLists.txt  Card.cpp  Card.h  main.cpp
